mdapipkg/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AB_Cell__c</fullName>
        <label>AB Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AB_Email__c</fullName>
        <label>AB Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AB_Fax__c</fullName>
        <label>AB Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AB_Phone__c</fullName>
        <label>AB Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Base__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned Base?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Buyer_Contact__c</fullName>
        <label>Authorized Buyer Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHSI_Customer__c</fullName>
        <description>Business Hish Speed Customer Indicator</description>
        <inlineHelpText>Identifies customers that currently have Frontier Business High Speed service</inlineHelpText>
        <label>BHSI Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bal_Count__c</fullName>
        <description>Count of Business Access Lines</description>
        <inlineHelpText>Count of Business Access Lines</inlineHelpText>
        <label>Bal Count</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bal_Customer__c</fullName>
        <description>Business Access Line Customer Indicator</description>
        <inlineHelpText>Identifies customers that currently have a at least one business access line</inlineHelpText>
        <label>Bal Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Centrex_Count__c</fullName>
        <description>Number of Centrex Lines for the customer</description>
        <inlineHelpText>Number of Centrex Lines for the customer?</inlineHelpText>
        <label>Centrex Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Centrex_Line__c</fullName>
        <description>Is the customer a Centrex Line customer</description>
        <inlineHelpText>Is the customer a Centrex Line customer?</inlineHelpText>
        <label>Centrex Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Spend__c</fullName>
        <description>Amount company spends on communications</description>
        <inlineHelpText>Amount company spends on communications</inlineHelpText>
        <label>Communication Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Unique identifier for a company record</description>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <description>Identifies the Customer status in relation to DPI products and services.</description>
        <inlineHelpText>The assigned value reflects the customer status in relation to Frontier products and services.</inlineHelpText>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Deactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Winback</fullName>
                </value>
                <value>
                    <fullName>New Add</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DW_Account_Join_Key__c</fullName>
        <description>Unique account identifier in the Frontier data warehouse system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique account identifier in the Frontier data warehouse system.</inlineHelpText>
        <label>DW Account Join Key</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DW_Customer_Id__c</fullName>
        <description>Identifies customers by a unique identifier and associated account relationships via the DW account join key.</description>
        <inlineHelpText>Identifies customers by a unique identifier and associated account relationships via the DW account join key.</inlineHelpText>
        <label>DW Customer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dail_Up_Customer__c</fullName>
        <description>Business Dila-Up Intenret Service Indicator</description>
        <inlineHelpText>Identifies customers that currently have business Dial-Up Internet service</inlineHelpText>
        <label>Dail-Up Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Difference__c</fullName>
        <formula>if( ISPICKVAL(Rating, &apos;Hot&apos;), TODAY() -   DATEVALUE(CreatedDate),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <description>Customers Do Not Contacted Flag indicates if the customer should be contacted for additional services and products.</description>
        <inlineHelpText>Customers that have actively requested that Frontier not contact them regarding promotions and products and services are set to &apos;Yes.&apos;</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes (Do not contact)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_Pack__c</fullName>
        <description>Business Feature Pack Description</description>
        <inlineHelpText>Type of Business Feature Package associated with the customer account.</inlineHelpText>
        <label>Feature Pack</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID_No__c</fullName>
        <label>Federal Tax ID No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Credit__c</fullName>
        <description>Good credit indicator</description>
        <inlineHelpText>Good credit values reflect the official credit status between the customer and Frontier.</inlineHelpText>
        <label>Good Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSI_Lines_Replaced__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>High Speed Internet Line replaced when adding new data service. (Enter &apos;0&apos; if none)</inlineHelpText>
        <label>HSI Lines Replaced</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Spend__c</fullName>
        <description>Amount company spends on IT</description>
        <inlineHelpText>Amount company spends on IT</inlineHelpText>
        <label>IT Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inactive_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if your company is inactive.</description>
        <inlineHelpText>Check this box if your company is inactive.</inlineHelpText>
        <label>Inactive Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_SIC_Code__c</fullName>
        <label>Industry SIC Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAM__c</fullName>
        <description>Local Area Market value</description>
        <inlineHelpText>Local Area Market value</inlineHelpText>
        <label>Local Area Market</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment_Type__c</fullName>
        <description>Frontier internal customer market type segment description</description>
        <inlineHelpText>Frontier internal customer market type segment description</inlineHelpText>
        <label>Market Segment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>CO OFF</fullName>
                </value>
                <value>
                    <fullName>Paystation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Contract_DT__c</fullName>
        <description>Identifies the latest contract expiration date on record for the customer.</description>
        <inlineHelpText>Maximium contract end date reflects the latested contract date expiration for all products and services.</inlineHelpText>
        <label>Max Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Metro_E_Index__c</fullName>
        <inlineHelpText>Likelihood of the business having or needing Ethernet services. Businesses with a score over 100 are above average candidates for Ethernet. 100 is the National average score for all businesses.</inlineHelpText>
        <label>Metro E Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Contract_Dt__c</fullName>
        <description>Identifies the earliest contract expiration date on record for the customer.</description>
        <inlineHelpText>Minimum contract date reflects the earliest contract date expiration for all products and services.</inlineHelpText>
        <label>Min Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Bill__c</fullName>
        <description>Customer Monthly Bill Average</description>
        <inlineHelpText>Monthly Bill is the average bill amount over a 3 month period.  This value is advisory and could vary greatly from typical bill months.</inlineHelpText>
        <label>Monthly Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Node_City__c</fullName>
        <inlineHelpText>City where telecommunications equipment is located.</inlineHelpText>
        <label>Node City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_Distance__c</fullName>
        <inlineHelpText>Distance from the business service address to Frontier telecommunications equipment.</inlineHelpText>
        <label>Node Distance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB_Cell__c</fullName>
        <label>PB Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PB_Email__c</fullName>
        <label>PB Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PB_Fax__c</fullName>
        <label>PB Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PB_Phone__c</fullName>
        <label>PB Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Package_Customer__c</fullName>
        <description>Frontier Business Feature Package Customer Indicator</description>
        <inlineHelpText>Identifies customers that currently have a at least one Business Feature Package</inlineHelpText>
        <label>Package Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Billing_Contact__c</fullName>
        <label>Primary Billing Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Update_Date__c</fullName>
        <description>Date Products, Services and Indicative Data was last updated.</description>
        <inlineHelpText>Date Products, Services and Indicative Data was last updated.</inlineHelpText>
        <label>Product Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Public_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Southeast &amp; Federal</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Frontier Secure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <description>Siebel Row ID</description>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SB_Cell__c</fullName>
        <label>SB Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SB_Email__c</fullName>
        <label>SB Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SB_Fax__c</fullName>
        <label>SB Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SB_Phone__c</fullName>
        <label>SB Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SCMS_No__c</fullName>
        <label>SCMS No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Desc__c</fullName>
        <label>SIC Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sal_Customer__c</fullName>
        <description>Second Access Line Customer Indicator</description>
        <inlineHelpText>Identifies customers that currently have a at least one second access line</inlineHelpText>
        <label>Sal Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Billing_Contact__c</fullName>
        <label>Secondary Billing Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_URL__c</fullName>
        <formula>IF(ISPICKVAL(approval_type__c, &apos;INA&apos;),&apos;http://google.com&apos;,&apos;&apos;)</formula>
        <label>Show URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Switched_Access_Lines__c</fullName>
        <inlineHelpText>Number of access lines or access line equivalents estimated to be at the business service address.</inlineHelpText>
        <label>Switched Access Lines</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Take_The_Lead_ID__c</fullName>
        <label>Take The Lead ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Wire_Line_Bill__c</fullName>
        <inlineHelpText>The best estimate of the businesses total monthly wireline communications bill across all application areas, including data and voice categories. This does NOT contain wireless spending components, but does contain cable, ISP and telecom components.</inlineHelpText>
        <label>Total Wire Line Bill</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VOIP_Index__c</fullName>
        <inlineHelpText>Likelihood of the business having or needing VoIP services. Businesses with a score over 100 are above average candidates for VoIP. 100 is the National average score for all businesses.</inlineHelpText>
        <label>VOIP Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Incorporated__c</fullName>
        <description>The 4-digit year the company was incorporated.</description>
        <inlineHelpText>The 4-digit year the company was incorporated.</inlineHelpText>
        <label>Year Incorporated</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>approval_type__c</fullName>
        <label>approval type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INA</fullName>
                </value>
                <value>
                    <fullName>ICB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllCompetitors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filters>
        <label>All Competitors</label>
    </listViews>
    <listViews>
        <fullName>AllPartners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>All Partners</label>
    </listViews>
    <listViews>
        <fullName>AllProspects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>All Prospects</label>
    </listViews>
    <listViews>
        <fullName>All_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>cogenic mechanical</value>
        </filters>
        <label>All Companies</label>
    </listViews>
    <listViews>
        <fullName>Ken_Honeycutt_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>SCMS_No__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.SALES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>honeycutt</value>
        </filters>
        <label>Ken Honeycutt Companies</label>
    </listViews>
    <listViews>
        <fullName>LIST301SERVICEADDRESS</fullName>
        <columns>SCMS_No__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>LIST 301: SERVICE ADDRESS</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Account_Teams</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <label>My Account Teams</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Pam_Harris_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Secondary_Billing_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>harris</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>pamela</value>
        </filters>
        <label>Pam Harris Companies</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <listViews>
        <fullName>list10</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>smith</value>
        </filters>
        <label>list10</label>
    </listViews>
    <recordTypes>
        <fullName>shilpa</fullName>
        <active>true</active>
        <label>shilpa</label>
    </recordTypes>
    <recordTypes>
        <fullName>vijay12</fullName>
        <active>true</active>
        <label>vijay12</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BillingAddressCheck</fullName>
        <active>true</active>
        <errorConditionFormula>BillingStreet =&quot;test&quot;</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>You must enter a Billing street</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ServiceAddressCheck</fullName>
        <active>false</active>
        <errorConditionFormula>ShippingState=&quot;&quot;</errorConditionFormula>
        <errorMessage>You must enter a Service Address</errorMessage>
    </validationRules>
</CustomObject>